[WIP] working on form for new mappings, now using color picker instead of entering color values, because they are really awesome.

--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -11,8 +11,10 @@
 
   <hr>
 
-  <span
+  <span *ngIf="dataService.selectedTypeHint">
+    <span
     *ngIf="(dataService.selectedTypeHint.nd || dataService.selectedTypeHint.ed) then discreteOverview else continuousOverview"></span>
+  </span>
 
   <ng-template #discreteOverview>
 
@@ -107,7 +109,7 @@
 
   </ng-template>
 
-  <hr>
+  <hr *ngIf="dataService.selectedTypeHint">
 
   <!-- SHOW LIST -->
   <div *ngIf="!showGlobalDeletionDialogue && !showSingleDeletionDialogue">
