[WIP] working on form for continuous mappings, also rounting for mapping details adjusted, to behave a little more intuitively

--- a/src/app/components/main-mappings-new/main-mappings-new.component.html
+++ b/src/app/components/main-mappings-new/main-mappings-new.component.html
@@ -140,9 +140,8 @@
                                   (stylePropertyEmitter)="setStyleProperty($event)"
                                   [isEdit]="isEdit"
                                   [typeHint]="typeHint"
-                                  [mapId]="currentMappingId"
                                   [propertyToMap]="propertyToMap"
-                                  [propertyPointer]="propertyId"></app-main-mappings-new-form>
+                                  [mappingContinuous]="continuousMapping"></app-main-mappings-new-form>
 
     </div>
 
