[WIP] color picker for changing highlight colors, also removed button, still issues with submitting new mappings

--- a/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
+++ b/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
@@ -49,7 +49,7 @@
              class="form-control"
              id="{{typeHint.ec ? 'ec' : 'nc'}}Value{{index}}"
              name="{{typeHint.ec ? 'ec' : 'nc'}}Value{{index}}"
-             type="text">
+             type="number">
       <input *ngIf="needsColorValidation(styleProperty)" [(ngModel)]="threshold.propertyValue"
              type="color"
              class="form-control form-control-color"
