--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -23,7 +23,7 @@
       <thead>
       <tr>
         <th>{{dataService.selectedDiscreteMapping.col}}</th>
-        <th *ngFor="let val of dataService.selectedDiscreteMapping.values" colspan="3">{{val}}</th>
+        <th *ngFor="let val of dataService.selectedDiscreteMapping.values">{{val}}</th>
       </tr>
       </thead>
 
