[WIP] not grouping discrete mappings, only working with pipes to group mappings in view

--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -23,7 +23,7 @@
       <thead>
       <tr>
         <th>{{dataService.selectedDiscreteMapping.col}}</th>
-        <th *ngFor="let val of dataService.selectedDiscreteMapping.values">{{val}}</th>
+        <th *ngFor="let val of dataService.selectedDiscreteMapping.values; let valueIndex = index">{{val}}</th>
       </tr>
       </thead>
 
